--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ELVISMugisha Portfolio | Index</title>
+  <title>ELVISMugisha | Portfolio Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,8 +59,10 @@
             <h2 class="text-muted mb-1" style="font-weight: bold; font-size: 30px;">Hello, I'm</h2>
             <h1 class="hero-subtitle text-muted" style="font-weight: bold; font-size: 40px;"><span style="font-weight: bold; font-size: 40px;"></span> ELVIS Mugisha</h1>
             <h1 class="hero-subtitle text-muted"><span class="typed" data-typed-items="Software Developer,Web Developer, Frontend Developer, Backend Developer, Full Stack Developer, Freelancer"></span></h1>
-            <p class="mt-4 text-muted">hcbhabcbdcn ndscnkds kncn dsnkcndsnc dn scnj dscnj dsncdnsncncnd</p>
-            <p class="pt-3"><a class="btn btn-success js-scroll px-4" href="#about" role="button">Learn More</a></p>
+            <!-- <p class="mt-4 text-muted">hcbhabcbdcn ndscnkds kncn dsnkcndsnc dn scnj dscnj dsncdnsncncnd</p> -->
+            <p class="pt-3">
+              <a class="btn btn-success js-scroll px-4" href="#about" role="button">Learn More</a>
+            </p>
           </div>
         </div>
       </div>
@@ -162,19 +164,19 @@
                         About me
                       </h5>
                     </div>
-                    <p class="lead" style="font-weight: bold;">
+                    <p class="lead">
                       Motivated and results-driven Software Engineer with 1+ year's of experience.
                       I have continuously demonstrated experience in improving software performance by
                       implementing new ideas, updating, testing, and coding. Experience in developing tools which increase accuracy, efficacy and performance of software. <br> 
                      
                     </p>
-                    <p class="lead" style="font-weight: bold;">
+                    <p class="lead">
                       I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
                     </p>
-                    <p class="lead" style="font-weight: bold;">
+                    <p class="lead">
                       Confident in working with various computer systems and software configuration processes. Comfortable in working in fast-paced environment and delivering exceptional results in a timely manner
                     </p>
-                    <p class="lead" style="font-weight: bold;">
+                    <p class="lead">
                       Experienced Front-End and Back-End Developer with excellent attention to detail and problem-solving skills. <br>
                       Proven experience with Python. Proficient in web development techniques and creating web applications such as Python Django, JavaScript, CSS, HTML and MySQL.
                     </p>
@@ -208,7 +210,7 @@
           <div class="col-sm-12" style="background-color: black;">
             <div class="box-shadow-full bg-dark">
               <div class="title-box text-center">
-                <h1 class="text-muted" style="font-weight: bold;">
+                <h1 class="text-muted in-container" style="font-weight: bold;">
                   My Expertise area
                 </h1>
                 <div class="line-mf"></div>
@@ -278,23 +280,24 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h2 class="text-muted" style="font-weight: bold;">
+              <h3 class="text-muted" style="font-weight: bold;">
                 My Qualification
-              </h2>
+              </h3>
               <div class="line-mf"></div>
             </div>
           </div>
         </div>
-        <div class="row bg-dark">
-          <div class="box-shadow-full bg-dark">
-            <div class="title-box text-center">
-              <h1 class="text-muted" style="font-weight: bold;">
-                Awesome Journey
-              </h1>
-              <div class="line-mf"></div>
-            </div>
-            <div class="row bg-dark">
-              <div class="col-sm-6 col-md-5 bg-dark">
+        <div class="row" style="background-color: black;">
+          <div class="col-sm-12" style="background-color: black;">
+            <div class="box-shadow-full bg-dark">
+              <div class="title-box text-center">
+                <h1 class="text-muted in-container" style="font-weight: bold;">
+                  Awesome Journey
+                </h1>
+                <div class="line-mf"></div>
+              </div>
+              <div class="row bg-dark">
+                <div class="col-sm-6 col-md-5 bg-dark">
                   <div class="container">
                   <div class="skill-mf">
                     <div class="title-box-2">
@@ -319,7 +322,7 @@
                     </div>
                     <br>
                     <div class="line">
-                      <h3 class="text-muted">High School Certificate</h3>
+                      <h3 class="text-muted">High School Degree</h3>
                       <p class="text-muted">Math-Chemistry-Biology</p>
                       <p class="text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
@@ -331,8 +334,15 @@
                     </div>
                     <br>
                     <div class="line">
-                      <h3 class="text-muted">Bachelor Dedree</h3>
-                      <p>Software Engineering</p>
+                      <h3 class="text-muted">High School Certificate</h3>
+                      <p class="text-muted">Computer Science</p>
+                      <p class="text-muted">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
+                          <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
+                          <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                        </svg>
+                        Jan 2017 - Dec 2017
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -351,7 +361,7 @@
                     </div>
                     <div class="line">
                       <h3 class="text-muted">Innov8 Incubator Program</h3>
-                      <p class="text-muted">Agile Ceremonies</p>
+                      <p class="text-muted">Tech lead</p>
                       <p class="text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                           <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
@@ -363,7 +373,7 @@
                     <br>
                     <div class="line">
                       <h3 class="text-muted">A . S . S Partners-Ltd</h3>
-                      <p class="text-muted">Internship</p>
+                      <p class="text-muted">Software developer internship</p>
                       <p class="text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                           <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
@@ -386,6 +396,7 @@
                     </div>
                   </div>
                 </div>
+              </div>
               </div>
             </div>
           </div>
@@ -414,15 +425,13 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-code-fill" viewBox="0 0 16 16">
                     <path d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM6.646 5.646a.5.5 0 1 1 .708.708L5.707 8l1.647 1.646a.5.5 0 0 1-.708.708l-2-2a.5.5 0 0 1 0-.708l2-2zm2.708 0 2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 8 8.646 6.354a.5.5 0 1 1 .708-.708z"/>
                   </svg>
-                  <!-- <i class="bi bi-file-code-fill"></i> -->
                 </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Software Developer</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Experienced in database management systems and software development, with a strong focus on full-stack World Wide Web applications. 
+                  And specializes in Django and Python with expertise deploying to both server and serverless environments. Also works in a team with tech lead role
                 </p>
               </div>
             </div>
@@ -435,9 +444,9 @@
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Web Developer</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  There are no formal educational or license requirements to become a developer. A web developer is a programmer
+                  who specializes or specifically engaged in the development of WWW applications using a client–server model. I use
+                  HTML, CSS, Bootstrap and JavaScript in the client, with Python Django in the server
                 </p>
               </div>
             </div>
@@ -449,15 +458,14 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-filetype-py" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2H7v-1h5a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5ZM0 11.85h1.6c.289 0 .533.06.732.179.201.117.355.276.46.477.105.201.158.427.158.677 0 .25-.054.476-.16.677-.106.199-.26.357-.464.474a1.452 1.452 0 0 1-.732.173H.79v1.342H0V11.85Zm2.06 1.714a.795.795 0 0 0 .085-.381c0-.227-.062-.4-.185-.521-.123-.122-.294-.182-.513-.182H.788v1.406h.66a.794.794 0 0 0 .374-.082.574.574 0 0 0 .238-.24Zm2.963.75v1.535H4.23v-1.52L2.89 11.85h.876l.853 1.696h.032l.856-1.696h.855l-1.339 2.464Z"/>
                   </svg>
-                  <!-- <i class="bi bi-filetype-py"></i> -->
                 </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Python Developer</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Python is a general-purpose language that has become very popular, in part due to the wide range of use cases, from web development 
+                  to data science and machine learning. Good Python developers are therefore highly sought after. Strong foundational knowledge of 
+                  programming in Python is essential for junior programmers.
                 </p>
               </div>
             </div>
@@ -469,15 +477,14 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
                     <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
                   </svg>
-                  <!-- <i class="bi bi-binoculars"></i> -->
                 </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Backend Developer</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Strives for pixel-perfect front-end responsive websites. 
+                  My Bootstrap and python Django skills give me the ability to also develop for the back-end. Thanks to my proactive attitude, effective communication,
+                  and flexibility, i can adapt to any team conditions in a short amount of time
                 </p>
               </div>
             </div>
@@ -489,15 +496,14 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-front" viewBox="0 0 16 16">
                     <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm5 10v2a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1h-2v5a2 2 0 0 1-2 2H5z"/>
                   </svg>
-                  <!-- <i class="bi bi-brightness-high"></i> -->
                 </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Frontend Developer</h2>
                 <p class="s-description text-muted text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Coding HTML, CSS, Bootstrap and JS, experience in adapting web technology to meet customer 
+                  needs is extensive. Enjoys bringing value to clients via eCommerce solutions, legacy integrations, and optimized Python Django and 
+                  Bootstrap-driven applications
                 </p>
               </div>
             </div>
@@ -509,15 +515,13 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-union" viewBox="0 0 16 16">
                     <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2z"/>
                   </svg>
-                  <!-- <i class="bi bi-calendar4-week"></i> -->
                 </span>
               </div>
               <div class="service-content">
                 <h2 class="s-title" style="color: #fff; font-weight: bold;">Full Stack Developer</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  passionate full-stack developer with a track record of taking large-scale web applications from the drawing board to 
+                  production. Proficient with modern web technologies, highly adaptable to any business requirements, and experienced with remote work
                 </p>
               </div>
             </div>
@@ -527,7 +531,7 @@
     </section>
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter" style="background-color: black">
+    <!-- <div class="section-counter" style="background-color: black">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -577,7 +581,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route" style="background-color: black;">
@@ -606,9 +610,9 @@
               <div class="work-content bg-dark">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">VisionArchitect</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Application</span> / <span class="w-date">March. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -630,9 +634,9 @@
               <div class="work-content bg-dark">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
+                    <h2 class="w-title">E-Travelling</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Application</span> / <span class="w-date">10 Sept - 20 Nov. 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
