--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a text-muted">
+              <h3 class="text-muted" style="font-weight: bold;">
                 About Me
               </h3>
               <div class="line-mf"></div>
@@ -410,7 +410,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a text-muted">
+              <h3 class="text-muted" style="font-weight: bold;">
                 Services
               </h3>
               <div class="line-mf"></div>
@@ -589,22 +589,19 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
-              <h3 class="title-a text-muted">
+              <h3 class="text-muted" style="font-weight: bold;">
                 Portfolio
               </h3>
-              <!-- <p class="subtitle-a text-muted">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              </p> -->
               <div class="line-mf"></div>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-12">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/visionarchitect.png" width=300 height=10 data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/visionarchitect.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content bg-dark">
@@ -624,7 +621,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
@@ -743,7 +740,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -754,6 +751,16 @@
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="text-muted" style="font-weight: bold;">
+                Testimonial
+              </h3>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-md-12">
 
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -762,13 +769,12 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Xavi Alonso</span>
+                      <img src="assets/img/ruti.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author text-muted" style="font-weight: bold;">Ruti Stiven</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        Fantastic service and great guy. We recommend to anyone who needs a website or web services. Well be using for any further web based services we require
                       </p>
                     </div>
                   </div>
@@ -777,13 +783,12 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Marta Socrate</span>
+                      <img src="assets/img/musas.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author text-muted" style="font-weight: bold;">Franck Musas</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        ELVIS is awesome, delivers exactly what you want and is a great guy as well, thanks for all your hard work on my website
                       </p>
                     </div>
                   </div>
@@ -920,6 +925,16 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="text-muted" style="font-weight: bold;">
+                Contact Me
+              </h3>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
             <div class="contact-mf">
               <div id="contact" class="box-shadow-full bg-dark">
                 <div class="row">
@@ -967,15 +982,12 @@
                     </div>
                     <div class="more-info">
                       <p class="lead text-muted">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        I am a fast leaner and often try to extend and improve my skills, I have a good ability to build constructive and social relations
                       </p>
                       <ul class="list-ico text-muted">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> +(250) 780-527-973</li>
-                        <li><span class="bi bi-envelope"></span> mugishaelvis104@gmail.com</li>
+                        <li style="font-weight: bold;"><span class="bi bi-geo-alt" style="color: #009973"></span> KK 447 ST KIGALI, RWANDA</li>
+                        <li style="font-weight: bold;"><span class="bi bi-phone" style="color: #009973"></span> +(250) 780-527-973</li>
+                        <li style="font-weight: bold;"><span class="bi bi-envelope" style="color: #009973"></span> mugishaelvis104@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
