--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                     <p class="lead">
                       Confident in working with various computer systems and software configuration processes. Comfortable in working in fast-paced environment and delivering exceptional results in a timely manner
                     </p>
-                    <p class="lead">
+                    <p class="lead lead1">
                       Experienced Front-End and Back-End Developer with excellent attention to detail and problem-solving skills. <br>
                       Proven experience with Python. Proficient in web development techniques and creating web applications such as Python Django, JavaScript, CSS, HTML and MySQL.
                     </p>
                     <div class="row">
                       <div class="col-md-12">
-                        <a href="assets/img/MugishaElvis Cv.pdf" download="ElvisMugisha_cv.pdf" target="_blank">Download My CV <span></span> </a>
+                        <a href="assets/img/Elvis Cv.pdf" download="ElvisMugisha_cv.pdf" target="_blank">Download My CV <span></span> </a>
                       </div>
                     </div>
                   </div>
