--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </div>
                     <br>
                     <div class="line">
-                      <h3 class="text-muted">High School Certificate</h3>
+                      <h3 class="text-muted">School Certificate</h3>
                       <p class="text-muted">Computer Science</p>
                       <p class="text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
