--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top bg-success">
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">ELVISMugisha</a></h1>
